--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
-            android:name=".OpenFitActivity"
+            android:name=".ui.OpenFitActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" >
@@ -48,7 +48,7 @@
             android:enabled="true"
             android:exported="false" >
         </service>
-        <service android:name=".NotificationService"
+        <service android:name=".notification.NotificationService"
             android:label="@string/service_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
